k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: save-app
  labels:
    name: save-app
    environment: base
